# echo

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  lib.rs
src-tauri/src/config/: autostart.rs  mod.rs  setup.rs
src-tauri/src/core/: commands.rs  events.rs
src-tauri/src/ui/: menu.rs  tray.rs
src/components/: Layout.css  Layout.tsx
src/lib/: commands.ts  events.ts  index.ts
src/pages/: About.tsx  NotFound.css  NotFound.tsx  Popover.tsx
src/routes/: config.ts  index.tsx
